# Agentic-Hybrid-RAG

./: .gitignore  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt  server.py
data/eval/: qa_gold.jsonl  rag_eval_dataset.csv
evaluation/: ablation_results.json  comparison_report.md  comparison_results.json  ragas_eval.py  ragas_results.json
src/: database.py  evaluation.py  graph.py  ragas_eval.py  retrieval.py  retrieval_eval.py
tests/: conftest.py  test_retrieval.py  test_routing.py
