[project]
name = "rag-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
]
